# Test_Framework

./: .gitignore  README.md  conftest.py  envir.xml  extract.yaml  pyproject.toml
base/: api_util.py  apiutil_business.py  generate_id.py  remove_file.py
common/: assertions.py  connection.py  debugtalk.py  ding_robot.py  operator_csv.py  operator_excel.py  operator_xml.py  operator_yaml.py  pjenkins.py  print_table.py  record_log.py  semail.py  send_request.py
conf/: config.ini  operator_config.py  operator_xml.py  setting.py
data/: test_data.xlsx
testcase/: conftest.py
testcase/Business interface/: test_business_scenario.py
testcase/ProductManager/: test_productList.py
