[project]
name = "test-framework"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "clickhouse-sqlalchemy>=0.3.2",
    "openpyxl==3.2.0b1",
    "pandas>=2.3.3",
    "paramiko==4.0.0",
    "pymongo==4.15.3",
    "pymysql>=1.1.2",
    "pyyaml>=6.0.3",
    "redis==7.0.1",
    "tabulate>=0.9.0",
    "wcwidth==0.2.14",
]
