[project]
name = "test-framework"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "allure-python-commons>=2.15.0",
    "clickhouse-sqlalchemy>=0.3.2",
    "jsonpath==0.82",
    "openpyxl==3.2.0b1",
    "pandas>=2.3.3",
    "paramiko==4.0.0",
    "pymongo==4.15.3",
    "pymysql>=1.1.2",
    "pytest==9.0.1",
    "python-jenkins==1.8.3",
    "pyyaml>=6.0.3",
    "redis==7.0.1",
    "tabulate>=0.9.0",
    "wcwidth==0.2.14",
]
